# Nimbus-Tasks

Projects/Athena/: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  ATHENA_PORTFOLIO_REPORT.md  CLEANUP_REPORT.md  CONTRIBUTING.md  Makefile  PLAYBOOKS.md  Procfile  README.md  SECURITY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements-full.txt  requirements.txt  resume_bullets.txt  simple_app.py  test_docker.sh  wsgi.py
Projects/Athena/.github/workflows/: ci.yml
Projects/Athena/artifacts/backtests/: AAPL_momentum_20250920_112211.txt  SPY_bollinger_20250920_112226.txt  SPY_sma_20250920_112156.txt
Projects/Athena/artifacts/dashboard/: dashboard_test_log.txt
Projects/Athena/artifacts/dashboard_media/: DEMO_INSTRUCTIONS.md  demo_backtest_result.txt
Projects/Athena/artifacts/paper_trading/: paper_trading_log.txt
Projects/Athena/artifacts/portfolio/: portfolio_demo_report.html
Projects/Athena/artifacts/security/: security_audit.txt
Projects/Athena/athena/backtest/: engine.py  metrics.py  walk_forward.py
Projects/Athena/athena/cli/: main.py
Projects/Athena/athena/core/: config.py  logging.py  position.py  risk.py  types.py
Projects/Athena/athena/dashboard/: __init__.py  app.py  modern_app.py  professional_app.py  stable_app.py
Projects/Athena/docker/: Dockerfile.app  Dockerfile.dashboard
Projects/Athena/docs/: ATHENA_VALIDATION_REPORT.md  PRODUCTION_SAFETY_SUMMARY.md  index.md  linkedin_post.md  repo_tree.md
Projects/Athena/scripts/: cleanup.py  generate_tree.py  link_check.py  portfolio_demo.py  test_paper_trading.py  validate_safety_guards.py
Projects/Athena/tests/: test_cli.py  test_dashboard.py  test_data.py  test_golden_backtest.py  test_integration.py  test_metrics.py  test_risk.py  test_strategies.py
(+968 files in other folders)
