[tool.poetry]
name = "athena"
version = "0.1.0"
description = "Production-grade algorithmic trading platform"
authors = ["Mickel Samuel <mickelsamuel.b@gmail.com>"]
readme = "README.md"
packages = [{include = "athena"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.3.2,<3.0.0"
numpy = ">=2.3.3,<3.0.0"
plotly = ">=6.3.0,<7.0.0"
dash = ">=3.2.0,<4.0.0"
typer = ">=0.19.1,<0.20.0"
pydantic-settings = ">=2.10.1,<3.0.0"
yfinance = ">=0.2.66,<0.3.0"
optuna = ">=4.5.0,<5.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
rich = ">=14.1.0,<15.0.0"
tenacity = ">=9.1.2,<10.0.0"
vectorbt = ">=0.28.1,<0.29.0"
structlog = ">=25.4.0,<26.0.0"
pyarrow = ">=20.0.0,<21.0.0"
websockets = ">=15.0.0,<16.0.0"
requests = ">=2.32.0,<3.0.0"
dash-bootstrap-components = ">=1.7.0,<2.0.0"
gunicorn = ">=23.0.0,<24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
mypy = ">=1.18.2,<2.0.0"
ruff = ">=0.13.1,<0.14.0"
black = ">=25.9.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"
pre-commit = ">=4.3.0,<5.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-mock = ">=3.14.0,<4.0.0"
safety = ">=3.2.0,<4.0.0"
bandit = ">=1.7.0,<2.0.0"
pip-audit = ">=2.7.0,<3.0.0"

[tool.poetry.scripts]
athena = "athena.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
